--- a/app/src/main/res/layout/usersecret.xml
+++ b/app/src/main/res/layout/usersecret.xml
@@ -14,7 +14,7 @@
         android:id="@+id/secret_title1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="请输入密保问题"
+        android:text="请输入密保问题回答"
         android:textColor="#000000"
         android:textSize="28sp"
         android:layout_marginStart="30dp"
@@ -25,7 +25,7 @@
         android:id="@+id/secret_title2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="这是一个文本标签"
+        android:text="你最喜欢的游戏是什么？"
         android:textColor="#000000"
         android:textSize="22sp"
         android:layout_marginStart="50dp"
@@ -47,7 +47,8 @@
         android:id="@+id/secret_button"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Button"
+        android:text="确认"
+        android:textSize="22sp"
         android:layout_marginStart="100dp"
         android:layout_marginEnd="100dp"
         android:layout_marginTop="80dp"
