--- a/app/src/main/res/layout/password_find.xml
+++ b/app/src/main/res/layout/password_find.xml
@@ -59,10 +59,10 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
         android:layout_marginTop="30dp"
-        android:theme="@style/MyEditText"
-        android:textColor="#000000"
         android:hint="密码"
-        android:inputType="numberPassword"/>
+        android:inputType="text"
+        android:textColor="#000000"
+        android:theme="@style/MyEditText" />
 
     <TextView
         android:id="@+id/passwordresettext1"
@@ -80,10 +80,10 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
         android:layout_marginTop="30dp"
-        android:theme="@style/MyEditText"
-        android:textColor="#000000"
         android:hint="再次输入"
-        android:inputType="numberPassword"/>
+        android:inputType="text"
+        android:textColor="#000000"
+        android:theme="@style/MyEditText" />
 
     <Button
         android:id="@+id/password_certify"
